# elv_wasm

./: .gitignore  API.md  ASMSCRIPT.md  Cargo.toml  README.md  RUSTAPI.md  build.rs  doc.tpl
.github/workflows/: elv_wasm.yml
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js
docs/ansi_term/: all.html  enum.Colour.html  fn.ANSIByteStrings.html  fn.ANSIStrings.html  fn.sub_string.html  fn.unstyle.html  fn.unstyled_len.html  index.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html  type.ANSIByteString.html  type.ANSIByteStrings.html  type.ANSIString.html  type.ANSIStrings.html
docs/atty/: all.html  enum.Stream.html  fn.is.html  fn.isnt.html  index.html
docs/base64/: all.html  enum.DecodeError.html  enum.DecodeSliceError.html  enum.EncodeSliceError.html  fn.decode.html  fn.decode_engine.html  fn.decode_engine_slice.html  fn.decode_engine_vec.html  fn.decoded_len_estimate.html  fn.encode.html  fn.encode_engine.html  fn.encode_engine_slice.html  fn.encode_engine_string.html  fn.encoded_len.html  index.html
docs/bitflags/: all.html  index.html  macro.bitflags.html
docs/cfg_if/: all.html  index.html  macro.cfg_if.html
docs/clap/: all.html  enum.AppSettings.html  enum.ArgSettings.html  enum.ErrorKind.html  enum.Shell.html  index.html  macro._clap_count_exprs.html  macro.app_from_crate.html  macro.arg_enum.html  macro.clap_app.html  macro.crate_authors.html  macro.crate_description.html  macro.crate_name.html  macro.crate_version.html  macro.value_t.html  macro.value_t_or_exit.html  macro.values_t.html  macro.values_t_or_exit.html  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Error.html  struct.OsValues.html  struct.SubCommand.html  struct.Values.html  type.Result.html
docs/elvwasm/: all.html  fn.jpc.html  fn.register_handler.html  index.html  macro.implement_bitcode_module!.html  macro.implement_bitcode_module.html  macro.implement_ext_func!.html  macro.implement_ext_func.html  macro.register_handlers.html  sidebar-items.js
docs/heck/: all.html  index.html  trait.CamelCase.html  trait.KebabCase.html  trait.MixedCase.html  trait.ShoutyKebabCase.html  trait.ShoutySnakeCase.html  trait.ShoutySnekCase.html  trait.SnakeCase.html  trait.SnekCase.html  trait.TitleCase.html
docs/itoa/: all.html  index.html  struct.Buffer.html  trait.Integer.html
docs/json_dotpath/: all.html  enum.Error.html  index.html  sidebar-items.js  trait.DotPaths.html  type.Result.html
docs/lazy_static/: all.html  fn.initialize.html  index.html  macro.lazy_static.html  trait.LazyStatic.html
docs/libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ACCOUNTING.html  constant.ADDR_COMPAT_LAYOUT.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  (+5371 more)
docs/lock_api/: all.html  index.html  struct.GuardNoSend.html  struct.GuardSend.html  struct.MappedMutexGuard.html  struct.MappedReentrantMutexGuard.html  struct.MappedRwLockReadGuard.html  struct.MappedRwLockWriteGuard.html  struct.Mutex.html  struct.MutexGuard.html  struct.RawReentrantMutex.html  struct.ReentrantMutex.html  struct.ReentrantMutexGuard.html  struct.RwLock.html  struct.RwLockReadGuard.html  struct.RwLockUpgradableReadGuard.html  struct.RwLockWriteGuard.html  trait.GetThreadId.html  trait.RawMutex.html  trait.RawMutexFair.html  trait.RawMutexTimed.html  trait.RawRwLock.html  trait.RawRwLockDowngrade.html  trait.RawRwLockFair.html  trait.RawRwLockRecursive.html  trait.RawRwLockRecursiveTimed.html  trait.RawRwLockTimed.html  trait.RawRwLockUpgrade.html  trait.RawRwLockUpgradeDowngrade.html  trait.RawRwLockUpgradeFair.html  trait.RawRwLockUpgradeTimed.html
docs/log/: all.html  enum.Level.html  (+22 more)
mock/: Cargo.toml
mock/src/: main.rs
samples/: .gitignore  Cargo.toml  build.rs  fabric.json  package-lock.json  package.json
samples/assembly/: index.ts
samples/everything/: Cargo.toml
samples/everything/src/: lib.rs  old_man.rs
samples/external-img/: Cargo.toml
samples/external-img/src/: lib.rs
samples/go/test_wapc/: go.mod  go.sum  main.go  test_wapc.wasm
samples/image/: Cargo.toml
samples/image/src/: lib.rs
samples/include/: bitcode-context.ts
samples/lro/: .yo-rc.json  Cargo.toml
samples/lro/src/: lib.rs
samples/meta/: Cargo.toml
samples/meta/src/: lib.rs
samples/meta/tests/: lib.rs
samples/objtar/: Cargo.toml
samples/objtar/src/: lib.rs
samples/panic/: Cargo.toml
samples/panic/src/: lib.rs
samples/parts_download/: Cargo.toml
samples/parts_download/src/: lib.rs
samples/playout/: Cargo.toml
samples/playout/src/: lib.rs
samples/playout/tests/: lib.rs
samples/proxy/: proxy.ts
samples/real-img/: Cargo.toml
samples/real-img/src/: lib.rs
samples/rproxy/: Cargo.toml  LICENSE_MIT
samples/rproxy/src/: lib.rs
samples/search/: Cargo.toml
samples/search/src/: crawler.rs  graph.rs  indexer.rs  lib.rs  searcher.rs  utils.rs
samples/src/: lib.rs  main.rs
scripts/: stage-wasi-debug.sh  stage-wasm-debug.sh  stage-wasm.sh
src/: bccontext.rs  bccontext_core.rs  bccontext_error.rs  bccontext_ext.rs  bccontext_fabric_io.rs  bccontext_search.rs  bccontext_struct.rs  lib.rs  main.rs
(+1187 files in other folders)
