[package]
name = "elvwasm"
description = "Contains and collects the bitcode extension API for the Eluvio content fabric"
homepage = "https://eluvio.co/"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/eluv-io/elv_wasm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
wapc = "0.10.1"
wapc-guest = "0.4.0"
serde = "*"
serde_json = "*"
serde_derive = "*"
lazy_static = "1.4.0"
scopeguard = "1.1.0"
base64 = "0.13.0"
snailquote = "0.3.1"
json_dotpath = "1.1.0"
structopt = "0.3.25"
thiserror = "1.0.30"

[workspace]
members = ["samples", "samples/rproxy", "samples/image", "samples/real-img", "samples/search", "samples/everything"]


