[package]
name = "elvwasm"
description = "Contains and collects the bitcode extension API for the Eluvio content fabric"
homepage = "https://eluvio.co/"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/eluv-io/elv-wasm"
readme = "README.md"
rust-version = "1.56.0"
license = "Apache-2.0"
keywords = ["eluvio", "content", "fabric"]
categories = ["api-bindings", "wasm"]
exclude = [
    "samples/*",
    "scripts/*",
    "build.rs",
    ".gitignore",
    ".github/*",
    "doc.tpl",
    "mock/*",
]

[profile.release]
strip = true # Automatically strip symbols from the binary.

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wapc = { version = "1.0.0" }

[lib]
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
wapc = "1.0.0"
wapc-guest = "1.0"
serde = "1.0.156"
serde_json = "1.0.94"
serde_derive = "1.0.156"
lazy_static = "1.4.0"
scopeguard = "1.1.0"
base64 = "0.21.0"
snailquote = "0.3.1"
json_dotpath = "1.1.0"
structopt = "0.3.25"
thiserror = "1.0.30"

[workspace]
members = [
    "samples",
    "samples/rproxy",
    "samples/real-img",
    "samples/search",
    "samples/objtar",
    "samples/lro",
    "samples/external",
    "samples/meta",
]
