[package]
name = "mock"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elvwasm = { path = ".." }
wapc = "0.10.1"
wapc-guest = "0.4.0"
serde = "*"
serde_json = "*"
serde_derive = "*"
lazy_static = "1.4.0"
scopeguard = "1.1.0"
wasmer = "2.1.1"
base64 = "0.13.0"
snailquote = "0.3.1"
json_dotpath = "1.1.0"
structopt = "0.3.25"
wasmtime-provider = "0.0.7"
wasmer-compiler-cranelift = "2.1.1"

