
[package]
name = "samples"
version = "0.1.0"
authors = ["Jan Falkin <jan.falkin@eluv.io>"]
license = "MIT"

[workspace]

[dependencies.image]
path = "image/"

[dependencies.rproxy]
path = "rproxy/"

[package.metadata.scripts]
install = "npm install && npm run asbuild"
build = "npm run asbuild"

[profile.release]
lto = true

