
[package]
name = "samples"
version = "0.1.0"
authors = ["Jan Falkin <jan.falkin@eluv.io>"]
license = "MIT"


[workspace]

[dependencies]

[dependencies.image]
path = "image/"

[dependencies.rproxy]
path = "rproxy/"

[dependencies.real-img]
path = "real-img/"


[package.metadata.scripts]
install = "npm install && npm run asbuild"
build = "npm run asbuild"

[profile.release]
lto = true

