[package]
name = "everything"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
elvwasm = { path = "../.."}
wapc = "0.10.1"
wapc-guest = "0.4.0"
serde = "*"
serde_json = "*"
serde_derive = "*"
lazy_static = "1.4.0"
snailquote = "0.3.0"
thiserror = "1.0.30"
scopeguard = "1.1.0"
base64 = "0.13.0"

[dependencies.image]
version = "0.23.14"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]