[package]
name = "image"
version = "0.1.0"
edition = "2021"
workspace = "../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
elvwasm = { path = "../.." }
wapc = "0.10.1"
wapc-guest = "0.4.0"
serde = "*"
serde_json = "*"
serde_derive = "*"
lazy_static = "1.4.0"
snailquote = "0.3.0"
scopeguard = "1.1.0"
thiserror = "1.0.30"


