[package]

name = "lro"
version = "0.0.1"
authors = ["lro <jan.falkin@eluv.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JanFalkin/lro"
description = "A Rust wasm library"
workspace = "../.."
edition = "2021"

[lib]
name = "lro"
crate-type = ["rlib", "cdylib"]

[dependencies]
elvwasm = { path = "../.." }
wapc = "1.0.0"
wapc-guest = "1.0"
serde = "1.0.156"
serde_json = "1.0.94"
serde_derive = "1.0.156"
