[package]
name = "objtar"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[lib]
name = "objtar"
crate-type = ["rlib", "cdylib"]

[dependencies]
elvwasm = {path = "../.."}
wapc = "*"
wapc-guest = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
scopeguard = "1.1.0"
base64 = "0.13.1"
flate2 = "1.0.24"
tar = "*"

