[package]

name = "panic"
version = "0.0.1"
authors = ["panic <panic@eluv.io>"]
license = "MIT"
repository = "https://www.github.com/eluv-io/elv-wasm"
description = "A Rust wasm bitcode example triggering a panic through division by zero"
edition = "2021"


[lib]
name = "panic"
crate-type = ["rlib", "cdylib"]

[dependencies]
elvwasm = { path = "../.." }
wapc = "1.0.0"
wapc-guest = "1.0"
serde = "1.0.156"
serde_json = "1.0.94"
serde_derive = "1.0.156"
