[package]
name = "parts_download"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[lib]
name = "parts_download"
crate-type = ["rlib", "cdylib"]

[dependencies]
elvwasm = { path = "../.." }
wapc = "1.0.0"
wapc-guest = "1.0"
serde = "1.0.156"
serde_json = "1.0.94"
serde_derive = "1.0.156"
scopeguard = "1.1.0"
base64 = "0.21.0"
flate2 = "1.0.24"
tar = "0.4.38"
