[package]
name = "real-img"
version = "0.1.0"
edition = "2021"
workspace = "../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
elvwasm = { path = "../.."}
wapc = "1.0.0"
wapc-guest = "1.0"
serde = "1.0.156"
serde_json = "1.0.94"
serde_derive = "1.0.156"
lazy_static = "1.4.0"
snailquote = "0.3.0"
scopeguard = "1.1.0"
base64 = "0.21.0"
thiserror = "1.0.30"


[dependencies.image]
version = "0.23.14"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]

