[package]
name = "rproxy"
version = "0.1.0"
authors = ["janfalkin <jan.falkin@eluv.io>"]
edition = "2018"
workspace = "../.."


[lib]
crate-type = ["rlib"]

[dependencies]
elvwasm = { path = "../.."}
wapc = "0.10.1"
wapc-guest = "0.4.0"
serde = "*"
serde_json = "*"
serde_derive = "*"
lazy_static = "1.4.0"
snailquote = "0.3.0"
thiserror = "1.0.30"
