[package]
name = "rproxy"
version = "0.1.0"
authors = ["janfalkin <jan.falkin@eluv.io>"]
edition = "2018"
workspace = "../.."


[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
elvwasm = { path = "../.."}
wapc = "1.0.0"
wapc-guest = "1.0"
serde = "1.0.156"
serde_json = "1.0.94"
serde_derive = "1.0.156"
lazy_static = "1.4.0"
snailquote = "0.3.0"
thiserror = "1.0.30"
