[package]
name = "search"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[lib]
crate-type = ["rlib", "cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elvwasm = { path = "../.."}
wapc = "0.10.1"
wapc-guest = "0.4.0"
serde = "*"
serde_json = "*"
serde_derive = "*"
linked-hash-map = { version = "*", features = ["serde_impl"] }
indexmap = {version = "*", features = ["serde-1"]}
lazy_static = "1.4.0"
snailquote = "0.3.0"
scopeguard = "1.1.0"
base64 = "0.13.0"
thiserror = "1.0.30"
petgraph = "0.6.2"


[dev-dependencies]
test-utils = {path = "test-utils"}
tantivy_jpc = { git = "https://github.com/JanFalkin/tantivy_jpc", branch = "use-in-rust" }
wasmer = "2.1.1"
json_dotpath = "1.1.0"
structopt = "0.3.25"
wasmer-compiler-cranelift = "2.1.1"
tempdir = "*"
